--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,8 +35,6 @@ steps:
 
 - task: PublishCodeCoverageResults@1
   inputs:
-    codeCoverageTool: 'JaCoCo'
-    summaryFileLocation: '$(System.DefaultWorkingDirectory)/intro1/**/coverage.xml'
-    pathToSources: '$(System.DefaultWorkingDirectory)/intro1'
-    reportDirectory: '$(System.DefaultWorkingDirectory)/intro1/code-coverage-HTML-report-directory'
+    codeCoverageTool: 'cobertura'
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.cobertura.xml'
     failIfCoverageEmpty: true
